#
#   $Id$
#
#   This is a log of major user-visible changes in each release
#

(unreleased):

    - Add support for [nosync] flag in sources.conf to prevent a source from syncing
      during a `port sync` or `port selfupdate` (eridius r25236).
      Example: file:///Users/landonf/misc/MacPorts/dports [nosync]

    - Updating a file: source via svn update during port sync now uses the uid/gid
      of the owner of the working copy (eridius r25142).

    - Make port(1) convert description and long_description from lists to
      strings before printing to stdout; this enables the proper printing of
      semi-colons, brackets and other characters by way of Tcl escape sequences.
      The exceptions to this are the sequences for newline and carriage return
      (these break the flatfile PortIndex format by introducing line breaks).
      (boeyms r25110)

    - Evaluate variants at dportopen instead of dportexec. This ensures that
      the portfile represents the proper information if queried before targets
      are executed. It also prevents variants from being executed twice if multiple
      targets are executed separately on the portfile (ticket #11296, eridius r25033).

    - Fix copy and move commands (eridius r25024).

    - Passing multiple arguments to $option-delete now works as expected
      (ticket #11929, eridius r25006).

    - fs-traverse no longer follows symlinks specified on the root. This fixes
      the incorrect behaviour of delete seen in #11862 (eridius r25003).

    - Remove bundled xar. (jberry r24913).
    
    - Tighten checking of port name in depspecs. neither + nor / is allowed.
      (jberry r24929, r24934, r24940).
      
    - Restore ability for portindex lines to contain carriage returns, allowing
      fields such as descriptions to contain line breaks. Note that any portindex
      containing such entries will not be readable by a recent version of macports.
      (jberry r25146)
      